--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@ HTML
 
 <p>Happy special birthday! Today is the day to celebrate your extraordinary existence.
 
-In the journey of life, I am grateful to have you by my side.
+In the journey of life, I am grateful to know you by my side.
 
 <br><br>
 
-Between seas, galaxtes, and moons, I was lucky I stepped on the same land, I dreamed under the same stars as you.
+Between seas, galaxtes, and moons, I was hope I stepped on the same land, I dreamed under the same stars as you.
 
 <br><br>
 
@@ -46,7 +46,7 @@ May this year be a chapter filled with happiness, success, and love. Thank you f
 
 extraordinary joy and achievements!</p>
 
-<p class="muted">- Michael -</p>
+<p class="muted">- Dinar -</p>
 
 </div>
 
