--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ HTML
 
 <p>Happy special birthday! Today is the day to celebrate your extraordinary existence.
 
-In the journey of life, I am grateful to know you by my side.
+In the journey of life, I am grateful to know you by my life.
 
 <br><br>
 
